# asmblr

./: .gitignore  README.md  generate_nodes.py  pyproject.toml
asmblr/: __init__.py  auto_loader.py  base.py  converter.py  expr_node.py  inspect_nodes.py  nodes.py  registry.py  serialize.py  settings.py  simple_registry.py  type_parser.py  var_nodes.py
asmblr/auto_nodes/: __init__.py  auto_geolipi_nodes.py  auto_mxg_nodes.py  auto_parsel_nodes.py  auto_splitweave_nodes.py  auto_sysl_nodes.py  geolipi_nodes.py  migumi_nodes.py  sysl_nodes.py
asmblr/custom_nodes/: __init__.py  custom_geolipi.py  custom_mxg.py  custom_splitweave.py  custom_sysl.py
scripts/: asmblr_frontend_json.py  converters.py  examples.py  test_serialization.py
